[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "numdux"
version = "0.1.0"
description = "Intelligent AI Co-Pilot for Data Scientists — powered by Bro AI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Numdux Contributors" }]
keywords = ["data-science", "ai", "automl", "eda", "langchain", "langgraph", "streamlit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "streamlit>=1.35.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "pyarrow>=14.0.0",
    "plotly>=5.20.0",
    "altair>=5.0.0",
    "litellm>=1.40.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langgraph>=0.1.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "markdown>=3.6",
]

[project.optional-dependencies]
full = [
    "autogluon.tabular",
    "shap",
    "ydata-profiling",
    "weasyprint",
    "polars",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "httpx",
    "black",
    "ruff",
    "mypy",
]

[project.scripts]
numdux = "app:main"
numdux-api = "api.main:app"

[project.urls]
Homepage = "https://github.com/numdux/numdux"
Repository = "https://github.com/numdux/numdux"
Issues = "https://github.com/numdux/numdux/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
